# rag-to-riches

./: LICENSE  README.md
01_rag_evals/: README.md  module1.ipynb
02_query_understanding/: 01_ecommerce_domain.ipynb  02_apollo_query_understanding.ipynb  03_financial_products.ipynb  README.md  amzn_esci_train_query_info.jsonl  hdfc_services_queries.jsonl  msmarco_web_queries_dev.tsv  pyproject.toml  query_understanding_with_instructor.ipynb
05_automatic_prompting/: 01_rag_demo.ipynb  02_building_from_scratch.ipynb  02_chain_of_thought.ipynb  README.md  building_from_scratch.ipynb  pyproject.toml  rag_demo.ipynb
09_neural_ir/: .cursorrules  README.md  neural_ir_demonstrations.py  neural_ir_previews.ipynb  pyproject.toml
10_testset_generation/: README.md  Testset Generation 0.2.ipynb
11_embedding_models/: README.md
12_vectorsearch_tricks/: README.md
15_text_profiling/: README.md
16_alberto_romero/: README.md  bfs_optimized_advisor_compiled.json  bfs_optimized_advisor_with_adv_metrics_compiled.json  dspy_risk.ipynb  mipro_optimized_advisor_compiled.json
16_alberto_romero/data/: training_data.json
lab01_finance_bench/: README.md
module1/: module1.ipynb
office-hours/: README.md
office-hours/cost_simulator/: simulator.py
