[tool.poetry]
name = "05-automatic-prompting"
version = "0.1.0"
description = ""
authors = ["NirantK <nirant.bits@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pandas = "^2.2.3"
dspy = "^0.1.5"
qdrant-client = "^1.11.2"
tqdm = "^4.66.5"
python-dotenv = "^1.0.1"
fastembed = "^0.3.6"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
